<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.easytestingtechniques</groupId>
	<version>0.0.1-SNAPSHOT</version>
	<artifactId>easytestingtechniques</artifactId>

	<parent>
		<groupId>org.allset.java</groupId>
		<artifactId>allset-java</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<properties>
		<testng.version>7.3.0</testng.version>
		<slf4j.version>1.7.30</slf4j.version>
		<assertj.version>3.18.1</assertj.version>
		<equalsverifier.version>3.4.3</equalsverifier.version>

		<checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
		<maven.source.plugin.version>3.0.1</maven.source.plugin.version>

		<guava.version>29.0-jre</guava.version>

		<commons.lang3.version>3.11</commons.lang3.version>
		<commons.validator.version>1.6</commons.validator.version>
		<commons.text.version>1.9</commons.text.version>
		<commons.collections4.version>4.4</commons.collections4.version>

		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<url>https://github.com/fernando-romulo-silva/easytestingtechniques</url>

	<scm>
		<url>https://github.com/fernando-romulo-silva/easytestingtechniques</url>
		<connection>scm:git:ssh://git@github.com/fernando-romulo-silva/easytestingtechniques.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/fernando-romulo-silva/easytestingtechniques.git</developerConnection>
		<tag>HEAD</tag>
	</scm>	

	<dependencies>
		<!-- TestNG : Automated Tests -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- AssertJ : Best assertions -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Commons Text -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons.text.version}</version>
		</dependency>

		<!-- Commons Collections -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${commons.collections4.version}</version>
		</dependency>

		<!-- Utils -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons.lang3.version}</version>
		</dependency>

		<!-- Utils -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>

		<!-- SLF4J : Framework for log -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- Equalsverifier : Framework to tests equals and hashCode methods -->
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>${equalsverifier.version}</version>
		</dependency>

		<dependency>
			<groupId>com.anyqn.lib</groupId>
			<artifactId>pairwiser</artifactId>
			<version>0.1.8</version> <!-- 0.1.10, 0.1.12 -->
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<compilerArgs>
						--enable-preview
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>

	</build>

</project>
